--- a/package.json
+++ b/package.json
@@ -13,8 +13,5 @@
     "vuepress-plugin-go-top": "^0.0.2",
     "vuepress-theme-reco": "1.2.0-alpha.15"
   },
-  "description": "my blog",
-  "dependencies": {
-    "@vuepress-reco/vuepress-plugin-bgm-player": "^1.1.1"
-  }
+  "description": "my blog"
 }
