--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-blog",
   "version": "1.0.0",
-  "author": "Caleb",
+  "author": "caleb",
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs"
