--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "vuepress": "1.2.0",
     "vuepress-plugin-comment": "^0.7.2",
+    "vuepress-plugin-container": "^2.1.2",
     "vuepress-plugin-dynamic-title": "^0.0.5",
     "vuepress-plugin-go-top": "^0.0.2",
     "vuepress-theme-reco": "1.2.0-alpha.15"
