--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vuepress-plugin-container": "^2.1.2",
     "vuepress-plugin-dynamic-title": "^0.0.5",
     "vuepress-plugin-go-top": "^0.0.2",
-    "vuepress-theme-reco": "1.2.0-alpha.15"
+    "vuepress-theme-reco": "^1.3.2",
+    "element-ui": "^2.13.0"
   },
   "description": "my blog"
 }
