--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "vuepress-theme-reco": "^1.3.2",
     "element-ui": "^2.13.0"
   },
-  "description": "my blog"
+  "description": "my blog",
+  "dependencies": {
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
+  }
 }
